--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@adonisjs/ignitor": "^2.0.8",
     "@adonisjs/lucid": "^6.1.3",
     "@adonisjs/mail": "^3.0.10",
+    "@adonisjs/redis": "^2.0.7",
     "@adonisjs/validator": "^5.0.6",
     "moment": "^2.27.0",
     "pg": "^8.2.1"
