--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@adonisjs/mail": "^3.0.10",
     "@adonisjs/redis": "^2.0.7",
     "@adonisjs/validator": "^5.0.6",
+    "@sentry/node": "^5.18.0",
     "adonis-kue": "^5.0.1",
     "moment": "^2.27.0",
     "pg": "^8.2.1"
